Single/MultiSelection: SelectedItems that are not in AllItems are now shown as invalid (TODO: Fix for MultiSelections!) Filter initialization in Single/MultiSelectionBuilder fixed.

--- a/Main/Source/MvvmContrib/MvvmContrib.csproj
+++ b/Main/Source/MvvmContrib/MvvmContrib.csproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <Compile Include="Common\OkCancelScreen.cs" />
     <Compile Include="Common\OkCancelVM.cs" />
+    <Compile Include="Common\Optional.cs" />
     <Compile Include="Common\SaveDiscardScreen.cs" />
     <Compile Include="Common\SaveDiscardVM.cs" />
     <Compile Include="Common\IOkCancelHandler.cs" />
