--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -213,14 +213,16 @@
     <Compile Include="ViewModels\Core\Validation\ValidationResultManager.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationStep.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationTrigger.cs" />
+    <Compile Include="ViewModels\Core\Validation\Args\CollectionValidationArgs.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\ConditionalValidator.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\DelegateValidator.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\IValidator.cs" />
-    <Compile Include="ViewModels\Core\Validation\Validators\PropertyValidationArgs.cs" />
-    <Compile Include="ViewModels\Core\Validation\Validators\ValidationArgs.cs" />
+    <Compile Include="ViewModels\Core\Validation\Args\PropertyValidationArgs.cs" />
+    <Compile Include="ViewModels\Core\Validation\Args\ValidationArgs.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\ValidationStepCondition.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\ValidationTargetCondition.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\Validator.cs" />
+    <Compile Include="ViewModels\Core\Validation\Args\ViewModelValidationArgs.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ValidationCoordinatorBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ValidatorExecutorBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ViewModelValidationSourceBehavior.cs" />
