--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -228,6 +228,12 @@
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ValidatorExecutorBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ViewModelValidationSourceBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelValidationBatch.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\ValidatorBuilderOperation.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\CollectionValidationBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\PropertyValidationBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\RootValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\ValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\ValidatorBuilderState.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\VMDescriptorConfiguration.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\IVMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\CacheBehavior.cs" />
