--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -141,6 +141,7 @@
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\ICommandCanExecuteBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\ICommandExecuteBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\ICommandFactoryBehavior.cs" />
+    <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\IValueInitializerBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\IRefreshBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\IPopulationBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\IUntypedValueGetterBehavior.cs" />
@@ -190,7 +191,7 @@
     <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\RefreshBehavior.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ChildScreenBehavior.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\UntypedPropertyAccessorBehavior.cs" />
-    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelProperty\ViewModelPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelProperty\ValueInitializerBehavior.cs" />
     <Compile Include="ViewModels\Core\Paths\Definition\PathDefinitionIterator.cs" />
     <Compile Include="ViewModels\Core\Paths\Definition\PathMatch.cs" />
     <Compile Include="ViewModels\Core\Paths\Definition\PropertyStep.cs" />
