--- a/Main/Source/Mvvm/Mvvm.csproj
+++ b/Main/Source/Mvvm/Mvvm.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Screens\ScreenCreationBehavior.cs" />
     <Compile Include="Screens\ScreenCreationBehaviorAttribute.cs" />
     <Compile Include="Screens\ScreenExtensions.cs" />
+    <Compile Include="Screens\ScreenHierarchyLifecycle.cs" />
     <Compile Include="Screens\ScreenInitializer.cs" />
     <Compile Include="Screens\ScreenLifecycle.cs" />
     <Compile Include="Screens\ScreenLifecycleCollection.cs" />
