--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -201,6 +201,9 @@
     <Compile Include="ViewModels\Core\Paths\PathIterator.cs" />
     <Compile Include="ViewModels\Core\Paths\PathStep.cs" />
     <Compile Include="ViewModels\Core\Paths\Definition\PathTerminationStep.cs" />
+    <Compile Include="ViewModels\Core\Undo\UndoCollectionModifcationBehavior.cs" />
+    <Compile Include="ViewModels\Core\Undo\UndoRootBehavior.cs" />
+    <Compile Include="ViewModels\Core\Undo\UndoSetValueBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionBehaviors\CollectionValidationResultCacheBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionBehaviors\CollectionValidationSourceBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionResultCache.cs" />
