--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -202,6 +202,7 @@
     <Compile Include="ViewModels\Core\Paths\PathStep.cs" />
     <Compile Include="ViewModels\Core\Paths\Definition\PathTerminationStep.cs" />
     <Compile Include="ViewModels\Core\Undo\UndoCollectionModifcationBehavior.cs" />
+    <Compile Include="ViewModels\Core\Undo\UndoManager.cs" />
     <Compile Include="ViewModels\Core\Undo\UndoRootBehavior.cs" />
     <Compile Include="ViewModels\Core\Undo\UndoSetValueBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionBehaviors\CollectionValidationResultCacheBehavior.cs" />
