--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ApiTests\ViewModels\Undo\EmployeeVM.cs" />
     <Compile Include="ApiTests\ViewModels\Undo\FirstTests.cs" />
     <Compile Include="ApiTests\ViewModels\Undo\ProjectVM.cs" />
+    <Compile Include="ApiTests\ViewModels\Undo\UndoRootSearchTests.cs" />
     <Compile Include="ApiTests\ViewModels\UntypedPropertyAccessTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\CollectionValidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ValidatorInteractionTests.cs" />
