--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -210,6 +210,8 @@
     <Compile Include="ViewModels\Core\Paths\PathIterator.cs" />
     <Compile Include="ViewModels\Core\Paths\PathStep.cs" />
     <Compile Include="ViewModels\Core\Paths\Definition\PathTerminationStep.cs" />
+    <Compile Include="ViewModels\Core\Undo\Actions\InitialPseudoAction.cs" />
+    <Compile Include="ViewModels\Core\Undo\Actions\IUndoableAction.cs" />
     <Compile Include="ViewModels\Core\Undo\UndoCollectionModifcationBehavior.cs" />
     <Compile Include="ViewModels\Core\Undo\UndoManager.cs" />
     <Compile Include="ViewModels\Core\Undo\UndoRootBehavior.cs" />
